Use real methods in benchmarks